# bevy_playground

./: Cargo.toml  README.md
assets/shaders/: sky_material.wgsl
crates/camera/: Cargo.toml
crates/camera/src/: lib.rs  rts.rs  spectator.rs
crates/debug/: Cargo.toml
crates/debug/src/: lib.rs
crates/skybox/: Cargo.toml
crates/skybox/src/: image.rs  lib.rs  material.rs
crates/voxel_terrain/: Cargo.toml
crates/voxel_terrain/src/: generator.rs  layout.rs  lib.rs  mesher.rs  tracker.rs
examples/: ai.rs  voxel.rs
