[package]
name = "bevy_procedural_gen"
version = "0.1.0"
authors = ["Jerahmeel Cosinas <me@jerahmeelcosinas.net>"]
repository = "https://github.com/sanisoclem/bevy_procedural_gen"
edition = "2021"

[dependencies]


[workspace]
members = ["crates/*"]

[dev-dependencies]
camera = { path = "./crates/camera", version = "0.1.0" }
voxel_terrain = { path = "./crates/voxel_terrain", version = "0.1.0" }
bevy = { git = "https://github.com/bevyengine/bevy", rev ="26c3b20f1ce1e04fcd37816d35fdff4d8433064f"}


[[example]]
name = "voxel"
path = "examples/voxel.rs"