[package]
name = "bevy_procedural_gen"
version = "0.1.0"
authors = ["Jerahmeel Cosinas <me@jerahmeelcosinas.net>"]
repository = "https://github.com/sanisoclem/bevy_procedural_gen"
edition = "2021"

[dependencies]


[workspace]
members = ["crates/*"]

[dev-dependencies]
camera = { path = "./crates/camera", version = "0.1.0" }
debug = { path = "./crates/debug", version = "0.1.0" }
voxel_terrain = { path = "./crates/voxel_terrain", version = "0.1.0" }
bevy = "0.7"
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render" ] }

[[example]]
name = "voxel"
path = "examples/voxel.rs"

[[example]]
name = "ai"
path = "examples/ai.rs"
